updated images, fixed some wrong spacings

--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ container 2
     margin-bottom: 72px;
 }
 
+
 .step-title {
     font-size: 18px;
     font-weight: 600;
@@ -200,10 +201,6 @@ container 2
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.step-row {
-    margin-bottom: 76px;
 }
 
 .row-item {
@@ -238,6 +235,9 @@ container 2
         display: flex;
         justify-content: center;
         margin-bottom: 100px;
+    }
+    .step-row {
+        margin-bottom: 76px;
     }
     .step-row:first-child {
         flex-direction: row-reverse;
@@ -276,7 +276,12 @@ container 2
         top: -85px;
         left:  -70px;
     }
-
+    .section-title-steps {
+        margin-bottom: 160px;
+    }
+    .arrowDown {
+        margin-bottom: 149px;
+    }
 }
 
 
@@ -290,11 +295,8 @@ TESTIMONIALS
 
 .testimonials {
     padding-top: 96px;
+    padding-bottom: 100px;
     background-color: #E9E9E9;
-}
-
-.testimonials-row {
-    margin-bottom: 89px;
 }
 
 .testimonials-card {
@@ -354,6 +356,7 @@ TESTIMONIALS
         display: flex;
         justify-content: center;
         gap: 100px;
+        margin-bottom: 80px;
     }
 }
 
